--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <div class="testi-card">
       <img src="creator.jpg" alt="Creator Review">
-      <h4>Rachit Coder</h4>
+      <h4>Rajan Gautam</h4>
       <span>Content Creator</span>
       <p>“A perfect platform for beginners.”</p>
     </div>
