--- a/contact.html
+++ b/contact.html
@@ -64,13 +64,7 @@
   </div>
 
   <hr>
-
-  <a href="privacy.html">Privacy Policy</a>
-  <a href="terms.html">Terms & Conditions</a>
-  <a href="disclaimer.html">Disclaimer</a>
-
-  <hr>
-  <div class="developer">This Website is
+  <div"developer">This Website is
     Developed by <span>Aarya CDR</span>
   </div>
 </div>
