--- a/contact.html
+++ b/contact.html
@@ -64,8 +64,9 @@
   </div>
 
   <hr>
-  <div"developer">This Website is
-    Developed by <span>Aarya CDR</span>
+
+  <div class="developer">
+      This Website is Developed by <span>Aarya CDR</span>
   </div>
 </div>
 
