--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
   <hr>
 
   <div class="social-links">
-    <a href="https://www.instagram.com/influenceraarya" target="_blank" rel="noopener noreferrer">
+    <a href="https://ig.me/m/mentionaarya" target="_blank" rel="noopener noreferrer">
       <i class="fab fa-instagram"></i> Instagram
     </a>
     <a href="https://youtube.com/@mentionaarya" target="_blank" rel="noopener noreferrer">
