--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
     
     
   <div class="contact-box">
-    <i class="fas fa-envelope"></i>
+    <i class="fas fa-instagram"></i>
     <h3>Email</h3>
     <p>Send us your query anytime</p>
     <a href="https//instagram.com" class="btn thurd">
