--- a/services.html
+++ b/services.html
@@ -48,7 +48,8 @@
   <a href="about.html">About</a>
   <a href="services.html" class="active">Services</a>
   <a href="contact.html">Contact</a>
-
+  <a href="rech.html">Recharge Offers</a>
+  
   <hr>
 
   <div class="social-links">
@@ -64,7 +65,6 @@
   </div>
 
   <hr>
-
   <div class="developer">This Website is
     Developed by <span>Aarya CDR</span>
   </div>
