--- a/index.html
+++ b/index.html
@@ -115,12 +115,32 @@
   <p class="testi-sub">Feedback from learners and users</p>
 
   <div class="testi-box">
-    <div class="testi-card">
-      <img src="profile.jpg" alt="Aarya Founder MIRO AI">
-      <h4>Aarya Coder</h4>
-      <span>Founder, MIRO AI</span>
-      <p>“The goal of MIRO AI is to make technology simple for everyone.”</p>
+<div class="card">
+  <div class="title">Founder</div>
+  <hr>
+
+  <div class="profile">
+    <div class="image">
+      <img src="photo.jpg" alt="Founder">
     </div>
+
+    <div class="content">
+      <h3>
+        Raja Gautam
+        <span class="verified">✔</span>
+      </h3>
+
+      <p class="designation">Founder & Developer</p>
+
+      <div class="icons">
+        <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="youtube"><i class="fab fa-youtube"></i></a>
+        <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
+        <a href="#" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
 
     <div class="testi-card">
       <img src="creator.jpg" alt="Creator Review">
