--- a/services.html
+++ b/services.html
@@ -48,8 +48,6 @@
   <a href="about.html">About</a>
   <a href="services.html" class="active">Services</a>
   <a href="contact.html">Contact</a>
-  <a href="rech.html">Recharge Offers</a>
-  
   <hr>
 
   <div class="social-links">
@@ -72,7 +70,7 @@
 
 <!-- ===== SERVICES HERO ===== -->
 <section class="services-hero">
-  <h1>Our <span>Services</span></h1>
+  <h1>Our Services</h1>
   <p>What MIRO AI offers to help you grow</p>
 </section>
 
